--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
     android:id="@+id/navigation_home"
     android:icon="@drawable/ic_home"
-    android:title="@string/Home" />
+        app:itemIconTint="@null"
+        android:title="@string/Home" />
 
 <item
     android:id="@+id/navigation_schedule"
     android:icon="@drawable/ic_schedule"
+    app:itemIconTint="@null"
     android:title="@string/Schedule" />
 
 <item
     android:id="@+id/navigation_profile"
     android:icon="@drawable/ic_profile"
+    app:itemIconTint="@null"
     android:title="@string/profile" />
 
 </menu>
