--- a/app/src/main/res/layout/dashboard_login.xml
+++ b/app/src/main/res/layout/dashboard_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    tools:context=".activities.LoginActivity">
+    tools:context=".activities.SigninActivity">
 
     <TextView
         android:id="@+id/welcomeTextView"
