--- a/app/src/main/res/layout/dashboard_sign_in.xml
+++ b/app/src/main/res/layout/dashboard_sign_in.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    tools:context=".activities.LoginActivity">
+    tools:context=".activities.SigninActivity">
 
     <!-- MedicManage Logo ImageView. Placed at the top center. -->
     <ImageView
