--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-    android:id="@+id/navigation_home"
-    android:icon="@drawable/ic_home"
-        app:itemIconTint="@null"
-        android:title="@string/Home" />
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_home"
+        android:title="@string/Home"
+        app:itemIconTint="@null" />
 
 <item
     android:id="@+id/navigation_schedule"
